# card_login

./: .gitignore  CMakeLists.txt  README.md  card_reader.cpp  card_reader.hpp  get_attendance.cpp  logger.cpp  login.cpp  makefile  readcard.cpp  student_db.cpp  student_db.hpp
include/: student_db.hpp
src/: CSVWriter.hpp  convert_db.cpp  export_db_to_csv.cpp  get_attendance.cpp  gui_log.cpp  login.cpp  read_db.cpp
src/lib/: card_reader.cpp  student_db.cpp
